# openmm_rigidbody_plugin

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md
openmmapi/include/: RigidBody.h  RigidBodyForce.h  RigidBodyIntegrator.h  RigidBodyKernels.h  RigidBodySystem.h
openmmapi/include/internal/: MatVec.h  RigidBodyForceImpl.h  Vec4.h  diagonalization.h  dsyevv3.h  eigenDecomposition.h  eigendecomposition.h  ellipticFunctions.h  windowsExportRigidBody.h
openmmapi/src/: MatVec.cpp  RigidBody.cpp  RigidBodyForce.cpp  RigidBodyForceImpl.cpp  RigidBodyIntegrator.cpp  RigidBodySystem.cpp  diagonalization.cpp  dsyevv3.cpp  eigenDecomposition.cpp  eigendecomposition.cpp
python/: CMakeLists.txt  forcefield.py  forcefieldextension.i  imports.py  rigidbodyplugin.i  setup.py  statedatareporter.py
serialization/include/: RigidBodyForceProxy.h  RigidBodyIntegratorProxy.h
serialization/src/: RigidBodyForceProxy.cpp  RigidBodyIntegratorProxy.cpp  RigidBodySerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializeRigidBodyForce.cpp  TestSerializeRigidBodyIntegrator.cpp
tests/: TestRigidBodyIntegrator.h
